[gd_scene load_steps=2 format=3 uid="uid://c53rviq3h11r4"]

[ext_resource type="Script" uid="uid://bcdvfiy2u1b6g" path="res://ui/lobby.gd" id="1"]

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0

[node name="Lobby_Panel#Title" type="Label" parent="."]
layout_mode = 0
offset_left = 17.0
offset_top = 287.0
offset_right = 157.0
offset_bottom = 310.0
text = "Multiplayer Lobby"

[node name="Lobby_Panel#IPLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 346.0
offset_top = 383.0
offset_right = 419.0
offset_bottom = 406.0
text = "Server IP:"

[node name="IPLine" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 431.0
offset_top = 381.0
offset_right = 584.0
offset_bottom = 412.0
text = "127.0.0.1"

[node name="Lobby_Panel#PortLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 379.0
offset_top = 420.0
offset_right = 417.0
offset_bottom = 443.0
text = "Port:"

[node name="PortLine" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 475.0
offset_top = 416.0
offset_right = 543.5625
offset_bottom = 447.0
text = "7777"

[node name="HostButton" type="Button" parent="."]
layout_mode = 0
offset_left = 490.0
offset_top = 258.0
offset_right = 534.0
offset_bottom = 289.0
text = "Host"

[node name="JoinButton" type="Button" parent="."]
layout_mode = 0
offset_left = 490.0
offset_top = 341.0
offset_right = 528.0
offset_bottom = 372.0
text = "Join"

[node name="QuitButton" type="Button" parent="."]
layout_mode = 0
offset_left = 484.0
offset_top = 505.0
offset_right = 526.0
offset_bottom = 536.0
text = "Quit"

[node name="StatusLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 19.0
offset_top = 183.0
offset_right = 105.0
offset_bottom = 206.0
text = "Status: idle"

[node name="Lobby_Panel#Hint" type="Label" parent="."]
layout_mode = 0
offset_left = 13.0
offset_top = 125.0
offset_right = 369.0
offset_bottom = 148.0
text = "Tip: Host first, then others Join using Host's IP."
